<resources>
    <string name="app_name">MercBenz2542</string>
    <string name="ripiu">Chassis  Mercedes Benz 2542</string>
    <string name="deskripsi"><i>Pesaing</i> Dari mesin premium pabrikan Swedia,yaitu Mercedes-Benz OC 500 RF 2542 ini diimport dari Spanyol dengan menggunakan mesin OM457LA yang jelas lebih kuat dan efisien jika digunakan untuk angkutan umum</string>
    <string name="mesin">- Mercedes-Benz OM457LA Euro 3
- Diesel, 6 segaris, injeksi langsung dengan turbo charger  Intercooler
Diameter/langkah : 128 / 155 mm
Total displacement : 11.967 cm3
Daya maks. : 310 kW (422bhp) pada 1.900 rpm
Torsi maks : 1.900 nm pada 1.100 rpm
Kopling :
- MFZ 439 Plat kering tungal, pegas diafragma
- Digerakan secara hidro-pneumatik dengan bantuan servo
Transmisi : 
- ZF AS Tronic 12
- Manual, Automatic 12-kecepatan maju
- Dilengkapi dengan ZF-Intrader
Perbandingan gigi :
12.326 / 9.59 / 7.435 / 5.784 / 4.565 / 3.552 / 2.7 / 2.101 / 1.629 / 1.267 / 1 / 0.778 dan R = 11.41
kecepatan maks : 120 km/h
Daya tanjak : 48%</string>
    <string name="axle">1st axle : Independen RL75E
Kapasitas 1st axle : 7.000 kg
2nd axle : MB-HO6 / 3 DLC(S)-13
Perbandingan gigi : l : 2.846
Kapasitas 2nd axle : 10.000 kg
3rd axle : ZF RL 75 actively steered trailing axle
Kapasitas 3rd axle : 7.000 kg
Total GVWR : 24.000 kg</string>
    <string name="suspensi">- Suspensi udara dengan 2 balon udara
- 2 peredam kejut dengan double acting, stabiliser
- satu buah penyetel level kontrol
Suspensi belakang :
- Suspensi udara dengan 4 balon udara
- 4 peredam kejut dengan double acting, stabiliser
- dua buah penyetel level kontrol</string>
    <string name="rem">Rem utama : Dua jalur udara tekan penuh dengan disc brake
Rem parkir : Pegas, kendali udara tekan penuh pada gandar belakang
Retarder : 
- ZF-Intrader, digerakan secara elektro-hidrolik
- dioperasikan melalui lever pada steering column dengan 5 step
Tambahan keselamatan :
- EBS (Electronic Braking System)
- ABS (Anti-lock Braking System)
- ACR (Acceleration Skid System)
- ESP (Electronic Stability Program)
Kemudi : Power Steering ZF-Servocom 8098
Ban  Pelek : 8.25 x 22.5 / 295/80 R 22.5</string>
    <string name="kelistrikan">Sistem : 24 volt
Alternator : 1 x 28 V / 140 A
Baterai : 2 x 12 V / 200 Ah</string>
    <string name="fuel">Tangki bahan bakar : Diatas gandar belakang
Kapasitas tangki : 600l</string>
    <string name="dimensi">Jarak sumbu utama : WB (mm) 3.000 (pabrik) / 6.300 (karoseri)
Jarak sumbu antar roda : WB1 (mm) 1.350
Julur depan : FOH (mm) 2.570
Julur belakang : ROH (mm) 2.825
Tinggi : OH (mm) 1.700
Panjang total : OL (mm) 9.745 (pabrik) / 13.500 (karoseri)
Lebar keseluruhan : OW (mm) 2.400
Jarak pijak roda depan : FR Tr (mm) 2.088
Jarak pijak roda belakang : RR Tr (mm) 2.199
Radius putar (mm) 11.900 mm

</string>
    
</resources>
